# swGEMM

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  swblas.h  test.c
asm/: README.md  dgemm_asm.S  dgemm_asm_best.S  dgemm_trans_asm.S  dgemm_trans_asm_m.S  gemm_float.S  sgemm_small.S
debug_slave/: sw_slave_dgemm.c  sw_slave_dgemm_trans.c  sw_slave_sgemm_float.c  sw_slave_sgemm_pad.c  sw_slave_sgemm_smallK.c  sw_slave_sgemm_trans.c  sw_slave_sgemm_trans_implicit.c  sw_slave_sgemm_trans_largek.c  sw_slave_sgemm_trans_onlycompute.c  sw_slave_sgemm_trans_onlydma.c  sw_slave_sgemm_trans_perfmdl.c  sw_slave_sgemm_trans_rank.c  sw_slave_sgemp.c
debug_src/: sw_sgemm_small.c  sw_sgemm_std_unit_test.c
gemm/: dgemm.c  dgemm_mnn.c  dgemm_trans.c  sgemm_small.S  sgemm_small.c
include/: common_slave.h
slave/: sw_copy_back_border.c  sw_copy_border.c  sw_slave_gemm_gen.c  sw_slave_gemm_trans_gen.c  sw_slave_sgemm.c  sw_slave_sgemm_trans_finial.c  sw_slave_zeropad_matrix.c
src/: common.c  sw_dgemm_std.c  sw_pad.c  sw_sgemm.c  sw_sgemm_nopad_interface.c  sw_sgemm_std.c  sw_sgemm_trans.c
util/: common_slave.c
